syntax = "proto3";
package Pylonstech.pylons.pylons;


option go_package = "github.com/Pylons-tech/pylons/x/pylons/types/v1";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "pylons/pylons/item.proto";


message Item {
  string owner = 1;
  string cookbookID = 2;
  string ID = 3;
  uint64 nodeVersion = 4;
  repeated pylons.pylons.item.DoubleKeyValue doubles = 5 [(gogoproto.nullable) = false];
  repeated pylons.pylons.item.LongKeyValue longs = 6 [(gogoproto.nullable) = false];
  repeated pylons.pylons.item.StringKeyValue strings = 7 [(gogoproto.nullable) = false];
  repeated pylons.pylons.item.StringKeyValue mutableStrings = 8 [(gogoproto.nullable) = false];
  bool tradeable = 9;
  int64 lastUpdate = 10;
  repeated cosmos.base.v1beta1.Coin transferFee = 11 [(gogoproto.nullable) = false];
  // The percentage of a trade sale retained by the cookbook owner. In the range (0.0, 1.0).
  string tradePercentage = 12 [(gogoproto.nullable) = false,(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"];
}



